--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>{{ name }}'s Watchlist</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
 </head>
 <body>
-    <h2>{{ name }}'s Watchlist</h2>
+    <h2>
+	<img class="avatar" alt="Avatar" src="{{ url_for('static', filename='images/avator.png') }}">
+	{{ name }}'s Watchlist
+</h2>
     {# 使用 length 过滤器获取 movies 变量的长度 #}
     <p>{{ movies|length }} Titles</p>
     <ul>
@@ -16,5 +20,6 @@
     <footer>
         <small>&copy; 2018 <a href="http://helloflask.com/book/3">HelloFlask</a></small>
     </footer>
+<img alt="Walking Totoro" src="{{ url_for('static', filename='images/totoro.gif') }}">
 </body>
 </html>
